After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 748354 - FTBFS since commit 618a96fea213d2c1310521dd88c252de6cbd256d when builddir != srcdir
FTBFS since commit 618a96fea213d2c1310521dd88c252de6cbd256d when builddir != ...
Status: RESOLVED FIXED
Product: vte
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: VTE Maintainers
VTE Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-04-23 09:12 UTC by Vadim Rutkovsky
Modified: 2015-04-23 10:20 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Vadim Rutkovsky 2015-04-23 09:12:50 UTC
From http://build.gnome.org/continuous/buildmaster/builds/2015/04/23/13/build/log-vte.txt:

In file included from /usr/include/glib-2.0/glib.h:82:0,
                 from ../../src/debug.h:26,
                 from ../../src/vtestream.cc:23:
../../src/vtestream-file.h: In function 'void _vte_boa_init(VteBoa*)':
../../src/vtestream-file.h:813:27: error: invalid use of incomplete type 'struct _vte_boa_init(VteBoa*)::_VteIv'
         g_assert_cmpuint (offsetof(struct _VteIv, padding), <=, VTE_CIPHER_IV_SIZE);
                           ^
/usr/include/glib-2.0/glib/gtestutils.h:54:62: note: in definition of macro 'g_assert_cmpuint'
                                              guint64 __n1 = (n1), __n2 = (n2); \
                                                              ^
../../src/vtestream-file.h:813:43: error: forward declaration of 'struct _vte_boa_init(VteBoa*)::_VteIv'
         g_assert_cmpuint (offsetof(struct _VteIv, padding), <=, VTE_CIPHER_IV_SIZE);
                                           ^
/usr/include/glib-2.0/glib/gtestutils.h:54:62: note: in definition of macro 'g_assert_cmpuint'
                                              guint64 __n1 = (n1), __n2 = (n2); \
                                                              ^
/usr/include/glib-2.0/glib/gtestutils.h:55:59: error: '__n2' was not declared in this scope
                                              if (__n1 cmp __n2) ; else \
                                                           ^
../../src/vtestream-file.h:813:9: note: in expansion of macro 'g_assert_cmpuint'
         g_assert_cmpuint (offsetof(struct _VteIv, padding), <=, VTE_CIPHER_IV_SIZE);
Comment 1 Vadim Rutkovsky 2015-04-23 09:14:22 UTC
Please revert commit https://git.gnome.org/browse/gnome-continuous/commit/?id=90e0dae926017ba5066ad17cce7231eeaa19a433 when issue is fixed
Comment 2 Christian Persch 2015-04-23 09:55:59 UTC
Hmm. The struct _VteIv definition needs to be moved out of struct _VteBoa definition.
Comment 3 Egmont Koblinger 2015-04-23 10:20:18 UTC
Fixed; thanks.