stream: Don't nest VteIv's definition

https://bugzilla.gnome.org/show_bug.cgi?id=748354